--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "allowJs": true,
-    "checkJs": true,
+    "allowJs": false,
     "declaration": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "es2020",
+    "module": "es2022",
     "skipLibCheck": true,
     "strict": true,
-    "target": "ES2020"
+    "target": "ES2022",
+    "outDir": "dist",
   },
-  "include": ["src/index.js"]
+  "include": ["src/lib.ts"],
 }
