--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fractional-indexing",
-  "version": "3.2.0",
+  "name": "fractional-indexing-base-26",
+  "version": "1.0.0",
   "description": "Provides functions for generating ordering strings",
   "type": "module",
   "main": "src/lib.ts",
