--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "typescript": "^5.3.3"
   },
   "exports": {
-    "import": ".dist/lib.js",
-    "types": ".dist/lib.d.ts"
+    "import": "./dist/lib.js",
+    "types": "./dist/lib.d.ts"
   },
   "files": [
     "dist"
